fixed article show alignment for different screen sizes

--- a/client/public/style/style.css
+++ b/client/public/style/style.css
@@ -23,7 +23,7 @@ div.row {
 }
 
 .article-detail {
-  margin-top: 30px;
+  margin-top: 60px;
   padding: 15px !important;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
